--- a/krampoline/package.json
+++ b/krampoline/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "npm run dev",
-    "dev": "vite --host 0.0.0.0 --port=3000",
+    "dev": "vite --host 0.0.0.0 --port=3000 --no-open",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
