--- a/krampoline/package.json
+++ b/krampoline/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.13.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
