--- a/krampoline/tsconfig.json
+++ b/krampoline/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    // svgr 플러그인 추가
     "types": ["vite-plugin-svgr/client", "node"],
 
     /* Bundler mode */
