--- a/krampoline/tsconfig.json
+++ b/krampoline/tsconfig.json
@@ -22,6 +22,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
+  // 프로그램에 포함할 파일 이름이나 패턴 배열 지정
   "include": ["src"],
+  // 프로젝트 참조 - 빌드 및 편집기 상호 작용 시간을 크게 개선, 구성 요소 간의 논리적 분리 강화, 새롭고 향상된 방식으로 코드 구성 가능
   "references": [{ "path": "./tsconfig.node.json" }]
 }
